rtime.3: Reformat thread-safety information
Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/rtime.3
+++ b/man3/rtime.3
@@ -55,10 +55,17 @@ The number of returned bytes is not 4.
 .B ETIMEDOUT
 The waiting time as defined in timeout has expired.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR rtime ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH NOTES
 Only IPv4 is supported.
 .LP
