rint.3: Reformat thread-safety information
Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/rint.3
+++ b/man3/rint.3
@@ -120,16 +120,24 @@ itself is returned.
 No errors occur.
 POSIX.1-2001 documents a range error for overflows, but see NOTES.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw26 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR nearbyint (),
 .BR nearbyintf (),
+.br
 .BR nearbyintl (),
 .BR rint (),
+.br
 .BR rintf (),
-and
 .BR rintl ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 C99, POSIX.1-2001.
 .SH NOTES
