--- a/man3/remove.3
+++ b/man3/remove.3
@@ -68,10 +68,17 @@ The errors that occur are those for
 and
 .BR rmdir (2).
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR remove ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 C89, C99, 4.3BSD, POSIX.1-2001.
 .\" .SH NOTES
