--- a/man3/re_comp.3
+++ b/man3/re_comp.3
@@ -64,12 +64,18 @@ otherwise it returns a pointer to an appropriate error message.
 .BR re_exec ()
 returns 1 for a successful match, zero for failure.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
-.BR re_comp ()
-and
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw20 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR re_comp (),
 .BR re_exec ()
-functions are not thread-safe.
+T}	Thread safety	MT-Unsafe
+.TE
 .SH CONFORMING TO
 4.3BSD.
 .SH NOTES
