qecvt.3: Reformat thread-safety information
Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/qecvt.3
+++ b/man3/qecvt.3
@@ -83,16 +83,21 @@ See
 and
 .BR gcvt (3).
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
-.BR qecvt ()
-and
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw16 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR qecvt (),
 .BR qfcvt ()
-functions are not thread-safe.
-.LP
-The
+T}	Thread safety	MT-Unsafe
+T{
 .BR qgcvt ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 SVr4.
 Not seen in most common UNIX implementations,
