pthread_yield.3: Reformat thread-safety information
Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/pthread_yield.3
+++ b/man3/pthread_yield.3
@@ -51,10 +51,17 @@ On Linux, this call always succeeds
 (but portable and future-proof applications should nevertheless
 handle a possible error return).
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR pthread_yield ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 This call is nonstandard, but present on several other systems.
 Use the standardized
