--- a/man3/pthread_testcancel.3
+++ b/man3/pthread_testcancel.3
@@ -56,10 +56,17 @@ This function always succeeds.
 .\" SH VERSIONS
 .\" Available since glibc 2.0
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw20 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR pthread_testcancel ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 POSIX.1-2001.
 .SH EXAMPLE
