--- a/man3/pthread_sigqueue.3
+++ b/man3/pthread_sigqueue.3
@@ -92,10 +92,17 @@ The
 .BR pthread_sigqueue ()
 function first appeared in glibc 2.11.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR pthread_sigqueue ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 This function is a GNU extension.
 .SH SEE ALSO
