--- a/man3/pthread_sigmask.3
+++ b/man3/pthread_sigmask.3
@@ -67,10 +67,17 @@ on error, it returns an error number.
 See
 .BR sigprocmask (2).
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR pthread_sigmask ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 POSIX.1-2001.
 .SH NOTES
