--- a/man3/pthread_setschedparam.3
+++ b/man3/pthread_setschedparam.3
@@ -139,12 +139,18 @@ to an unsupported value") error for
 .\" .SH VERSIONS
 .\" Available since glibc 2.0
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
-.BR pthread_setschedparam ()
-and
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw24 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR pthread_setschedparam (),
 .BR pthread_getschedparam ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 POSIX.1-2001.
 .SH NOTES
