--- a/man3/pthread_kill.3
+++ b/man3/pthread_kill.3
@@ -70,10 +70,17 @@ on error, it returns an error number, and no signal is sent.
 .B EINVAL
 An invalid signal was specified.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR pthread_kill ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 POSIX.1-2008.
 .SH NOTES
