--- a/man3/pthread_exit.3
+++ b/man3/pthread_exit.3
@@ -73,10 +73,17 @@ This function does not return to the caller.
 .SH ERRORS
 This function always succeeds.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR pthread_exit ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 POSIX.1-2001.
 .SH NOTES
