--- a/man3/pthread_equal.3
+++ b/man3/pthread_equal.3
@@ -45,10 +45,17 @@ returns a nonzero value; otherwise, it returns 0.
 .SH ERRORS
 This function always succeeds.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR pthread_equal ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 POSIX.1-2001.
 .SH NOTES
