posix_openpt.3: Reformat thread-safety information
Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/posix_openpt.3
+++ b/man3/posix_openpt.3
@@ -75,10 +75,17 @@ Glibc support for
 .BR posix_openpt ()
 has been provided since version 2.2.1.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR posix_openpt ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 .BR posix_openpt ()
 is part of the UNIX 98 pseudoterminal support (see
