mq_send.3: Reformat thread-safety information
Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/mq_send.3
+++ b/man3/mq_send.3
@@ -159,12 +159,18 @@ attribute of the message queue.
 .B ETIMEDOUT
 The call timed out before a message could be transferred.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
-.BR mq_send ()
-and
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw25 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR mq_send (),
 .BR mq_timedsend ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 POSIX.1-2001.
 .SH NOTES
