--- a/man3/mq_receive.3
+++ b/man3/mq_receive.3
@@ -154,12 +154,18 @@ attribute of the message queue.
 .B ETIMEDOUT
 The call timed out before a message could be transferred.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
-.BR mq_receive ()
-and
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw31 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR mq_receive (),
 .BR mq_timedreceive ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 POSIX.1-2001.
 .SH NOTES
