--- a/man3/mq_open.3
+++ b/man3/mq_open.3
@@ -235,10 +235,17 @@ This probably occurred because the
 limit was encountered; see
 .BR mq_overview (7).
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR mq_open ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 POSIX.1-2001.
 .SH BUGS
