--- a/man3/mq_getattr.3
+++ b/man3/mq_getattr.3
@@ -135,12 +135,18 @@ is invalid.
 contained set bits other than
 .BR O_NONBLOCK .
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
-.BR mq_getattr ()
-and
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw26 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR mq_getattr (),
 .BR mq_setattr ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 POSIX.1-2001.
 .SH NOTES
