mkstemp.3: Reformat thread-safety information
Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/mkstemp.3
+++ b/man3/mkstemp.3
@@ -193,14 +193,21 @@ and
 .BR mkostemps ()
 are available since glibc 2.11.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw23 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR mkstemp (),
 .BR mkostemp (),
+.br
 .BR mkstemps (),
-and
 .BR mkostemps ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 .BR mkstemp ():
 4.3BSD, POSIX.1-2001.
