mkfifo.3: Reformat thread-safety information
Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/mkfifo.3
+++ b/man3/mkfifo.3
@@ -182,12 +182,18 @@ It is implemented using
 .BR mknodat (2),
 available on Linux since kernel 2.6.16.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
-.BR mkfifo ()
-and
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw20 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR mkfifo (),
 .BR mkfifoat ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 .BR mkfifo ():
 POSIX.1-2001, POSIX.1-2008.
