--- a/man3/iconv.3
+++ b/man3/iconv.3
@@ -140,7 +140,6 @@ An incomplete multibyte sequence has been encountered in the input.
 .SH VERSIONS
 This function is available in glibc since version 2.1.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
 For an explanation of the terms used in this section, see
 .BR attributes (7).
 .TS
@@ -150,8 +149,15 @@ l l l.
 Interface	Attribute	Value
 T{
 .BR iconv ()
-T}	Thread safety	MT-Safe
+T}	Thread safety	MT-Safe race:cd
 .TE
+.PP
+The
+.BR iconv ()
+function is MT-Safe, as long as callers arrange for
+mutual exclusion on the
+.I cd
+argument.
 .SH CONFORMING TO
 POSIX.1-2001.
 .SH NOTES
