--- a/man3/mempcpy.3
+++ b/man3/mempcpy.3
@@ -58,12 +58,18 @@ wide characters.
 .BR mempcpy ()
 first appeared in glibc in version 2.1.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
-.BR mempcpy ()
-and
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw21 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR mempcpy (),
 .BR wmempcpy ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 This function is a GNU extension.
 .SH EXAMPLE
