memchr.3: Reformat thread-safety information
Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/memchr.3
+++ b/man3/memchr.3
@@ -122,13 +122,19 @@ first appeared in glibc in version 2.1.
 .BR memrchr ()
 first appeared in glibc in version 2.2.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw32 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR memchr (),
 .BR memrchr (),
-and
 .BR rawmemchr ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 The
 .BR memchr ()
