--- a/man3/mbsinit.3
+++ b/man3/mbsinit.3
@@ -82,10 +82,17 @@ is an initial state, or if
 is NULL.
 Otherwise, it returns 0.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR mbsinit ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 C99.
 .SH NOTES
