--- a/man3/atoi.3
+++ b/man3/atoi.3
@@ -86,17 +86,19 @@ string to their return type of \fIlong\fP or \fIlong long\fP.
 .SH RETURN VALUE
 The converted value.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw23 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR atoi (),
 .BR atol (),
-and
 .BR atoll ()
-functions are thread-safe with exceptions.
-These functions can be safely used in multithreaded applications,
-as long as
-.BR setlocale (3)
-is not called to change the locale during their execution.
+T}	Thread safety	MT-Safe locale
+.TE
 .SH CONFORMING TO
 SVr4, POSIX.1-2001, 4.3BSD, C99.
 C89 and
