tmpnam.3: Modify thread-safety information
When the argument s is NULL, tmpnam() should be MT-Unsafe.

Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/tmpnam.3
+++ b/man3/tmpnam.3
@@ -93,7 +93,7 @@ l l l.
 Interface	Attribute	Value
 T{
 .BR tmpnam ()
-T}	Thread safety	MT-Safe /!s
+T}	Thread safety	MT-Unsafe race:tmpnam/!s
 T{
 .BR tmpnam_r ()
 T}	Thread safety	MT-Safe
