--- a/man3/ctermid.3
+++ b/man3/ctermid.3
@@ -59,11 +59,17 @@ is the maximum number of characters in the returned pathname.
 .SH RETURN VALUE
 The pointer to the pathname.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR ctermid ()
-function is thread-safe with exceptions.
-It is not thread-safe if called with a NULL parameter.
+T}	Thread safety	MT-Unsafe race:ctermid/!s
+.TE
 .SH CONFORMING TO
 Svr4, POSIX.1-2001.
 .SH BUGS
