--- a/man3/hsearch.3
+++ b/man3/hsearch.3
@@ -229,20 +229,24 @@ POSIX.1-2001 specifies only the
 .B ENOMEM
 error.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw38 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR hcreate (),
 .BR hsearch (),
-and
 .BR hdestroy ()
-functions use a global space for storing the table, so they are not thread-safe.
-.LP
-The
+T}	Thread safety	MT-Unsafe
+T{
 .BR hcreate_r (),
 .BR hsearch_r (),
-and
 .BR hdestroy_r ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 The functions
 .BR hcreate (),
