--- a/man3/getlogin.3
+++ b/man3/getlogin.3
@@ -138,19 +138,23 @@ password database file
 (traditionally \fI/etc/utmp\fP;
 some libc versions used \fI/var/adm/utmp\fP)
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR getlogin ()
-function is not thread-safe.
-.LP
-The
+T}	Thread safety	MT-Unsafe locale
+T{
 .BR getlogin_r ()
-function is thread-safe.
-.LP
-The
+T}	Thread safety	MT-Safe locale
+T{
 .BR cuserid ()
-function is thread-safe with exceptions.
-It is not thread-safe if called with a NULL parameter.
+T}	Thread safety	MT-Unsafe race:cuserid/!string locale
+.TE
 .SH CONFORMING TO
 .BR getlogin ()
 and
