--- a/man7/attributes.7
+++ b/man7/attributes.7
@@ -187,7 +187,7 @@ the result is a deadlock.
 
 Functions annotated with
 .I lock
-as an AC-Unsafe feature may, if cancelled asynchronously,
+as an AC-Unsafe feature may, if canceled asynchronously,
 fail to release a lock that would have been released if their execution
 had not been interrupted by asynchronous thread cancellation.
 Once a lock is left taken, attempts to take that lock will block indefinitely.
@@ -515,7 +515,7 @@ The identifier that follows the
 .I const
 mark will appear by itself as a safety note in readers.
 Programs that wish to work around this safety issue,
-so as to call writers, may use a non-recursve
+so as to call writers, may use a non-recursive
 .I rwlock
 associated with the identifier, and guard
 .I all
@@ -605,7 +605,7 @@ Functions marked with
 .I term
 as an AC-Safety issue are supposed to
 restore terminal settings to their original state,
-after temporarily changing them, but they may fail to do so if cancelled.
+after temporarily changing them, but they may fail to do so if canceled.
 
 .\" fixme: at least deferred cancellation should get it right, and would
 .\" obviate the restoring bit below, and the qualifier above.
