getttyent.3: Reformat thread-safety information
Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/getttyent.3
+++ b/man3/getttyent.3
@@ -70,22 +70,20 @@ can be:
 #define TTY_SECURE 0x02  /* allow UID 0 to login */
 .fi
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
-.BR getttyent ()
-function returns a pointer to a static variable, so it is not thread-safe.
-.LP
-The
-.BR setttyent ()
-and
-.BR endttyent ()
-functions use a static variable, so they are not thread-safe.
-.LP
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw25 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR getttyent (),
+.BR setttyent (),
+.BR endttyent (),
 .BR getttynam ()
-function calls thread-unsafe function
-.BR getttyent ()
-so it is not thread-safe.
+T}	Thread safety	MT-Unsafe race:ttyent
+.TE
 .SH CONFORMING TO
 Not in POSIX.1-2001.
 Present on the BSDs, and perhaps other systems.
