--- a/man3/mbrtowc.3
+++ b/man3/mbrtowc.3
@@ -171,11 +171,17 @@ character, meaning that
 .I n
 should be increased.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR mbrtowc ()
-function is thread-safe with exceptions.
-It is not thread-safe if called with a NULL \fIps\fP parameter.
+T}	Thread safety	MT-Unsafe race:mbrtowc/!ps
+.TE
 .SH CONFORMING TO
 C99.
 .SH NOTES
