matherr.3: Reformat thread-safety information
Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/matherr.3
+++ b/man3/matherr.3
@@ -273,10 +273,17 @@ fmod(x,0)	DOMAIN	x	y	EDOM
 remainder(x,0)	DOMAIN	NAN	y	EDOM	\" retval is 0.0/0.0
 .TE
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR matherr ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH EXAMPLE
 The example program demonstrates the use of
 .BR matherr ()
