--- a/man7/attributes.7
+++ b/man7/attributes.7
@@ -252,7 +252,7 @@ Other keywords that appear in safety notes are defined in subsequent sections.
 .\" applying relocations and more,
 .\" all of this while holding internal dynamic loader locks.
 .\" 
-.\" The locks are enough for these functions to be AS- and AC-Unsafe,
+.\" The locks are enough for these functions to be AS-Unsafe and AC-Unsafe,
 .\" but other issues may arise.
 .\" At present this is a placeholder for all
 .\" potential safety issues raised by
@@ -346,7 +346,7 @@ the function can then be safely called after other threads are started.
 
 Functions marked with
 .I init
-as an AS- or AC-Unsafe feature use the GNU C Library internal
+as an AS-Unsafe or AC-Unsafe feature use the GNU C Library internal
 .I libc_once
 machinery or similar to initialize internal data structures.
 
@@ -668,7 +668,7 @@ environment with
 or similar, without any guards to ensure
 safety in the presence of concurrent modifications.
 
-We do not mark these functions as MT- or AS-Unsafe, however,
+We do not mark these functions as MT-Unsafe or AS-Unsafe, however,
 because functions that modify the environment are all marked with
 .I const:env
 and regarded as unsafe.
