--- a/man7/attributes.7
+++ b/man7/attributes.7
@@ -190,7 +190,8 @@ Other keywords that appear in safety notes are defined in subsequent sections.
 .\" as an AC-Unsafe feature may, if canceled asynchronously,
 .\" fail to release a lock that would have been released if their execution
 .\" had not been interrupted by asynchronous thread cancellation.
-.\" Once a lock is left taken, attempts to take that lock will block indefinitely.
+.\" Once a lock is left taken,
+.\" attempts to take that lock will block indefinitely.
 .\" .TP
 .\" .I corrupt
 .\" Functions marked with
